optimized base 64 decoding in MAP